--- a/template/list.html
+++ b/template/list.html
@@ -94,6 +94,10 @@
         <div class="add-study-container">
             <a href="{% url 'form' %}">Add Study</a>
         </div>
+        <div class="add-study-container">
+           <a href="{% url 'logout' %}">logout</a>
+        </div>
+
         
     </div>
 </body>
